Implemented SharedPreferences to save application data. Removed password and replaced with linkedNumber so that any user can use. Cleaned up code formatting.

--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -6,11 +6,11 @@
     android:gravity="center"
     android:orientation="vertical"
     android:weightSum="1" >
-
+
     <ScrollView
         android:id="@+id/mainActivityScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent" >
 
 		<LinearLayout
 		    xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,33 +20,33 @@
 		    android:gravity="center"
 		    android:orientation="vertical"
 		    android:weightSum="1" >
-
+
 			<LinearLayout
 			    android:id="@+id/drunkLevelLinearLayout"
-			    android:layout_width="match_parent"
+			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_margin="@dimen/general_margin"
 			    android:orientation="vertical" >
-
+
 			    <SeekBar
 			        android:id="@+id/drunkLevelSeekBar"
-			        android:layout_width="match_parent"
+			        android:layout_width="fill_parent"
 			        android:layout_height="wrap_content"
 			        android:layout_weight="1" />
-
+
 			    <RelativeLayout
 			        android:id="@+id/drunkLevelRelativeLayout"
-			        android:layout_width="match_parent"
+			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:layout_marginTop="10dp"
 			        android:layout_weight="1" >
-
+
 			        <TextView
 			            android:id="@+id/drunkLevelTextView"
 			            android:layout_width="wrap_content"
 			            android:layout_height="wrap_content"
-			            android:layout_weight="1"
 			            android:layout_alignParentLeft="true"
+			            android:layout_weight="1"
 			            android:text="drunkTextView" />
 
 			        <Button
@@ -60,25 +60,25 @@
 			    </RelativeLayout>
 
 			</LinearLayout>
-
+
 			<LinearLayout
 			    android:id="@+id/mwahLevelLinearLayout"
-			    android:layout_width="match_parent"
+			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_margin="@dimen/general_margin"
 			    android:orientation="vertical" >
-
+
 			    <SeekBar
 			        android:id="@+id/mwahLevelSeekBar"
-			        android:layout_width="match_parent"
-			        android:layout_height="wrap_content"			        
+			        android:layout_width="fill_parent"
+			        android:layout_height="wrap_content"
 			        android:layout_weight="1" />
-
+
 			    <RelativeLayout
 			        android:id="@+id/mwahButtonsRelativeLayout"
-			        android:layout_width="match_parent"
-			        android:layout_height="wrap_content"	
-			        android:layout_marginTop="10dp" 		        
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_marginTop="10dp"
 			        android:layout_weight="1" >
 
 			        <TextView
@@ -100,23 +100,23 @@
 
 			    </RelativeLayout>
 			</LinearLayout>
-
+
 			<LinearLayout
 			    android:id="@+id/huggleLevelLinearLayout"
-			    android:layout_width="match_parent"
+			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_margin="@dimen/general_margin"
 			    android:orientation="vertical" >
-
+
 			    <SeekBar
 			        android:id="@+id/huggleLevelSeekBar"
-			        android:layout_width="match_parent"
+			        android:layout_width="fill_parent"
 			        android:layout_height="wrap_content"
 			        android:layout_weight="1" />
-
+
 			    <RelativeLayout
 			        android:id="@+id/huggleLevelRelativeLayout"
-			        android:layout_width="match_parent"
+			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:layout_marginTop="10dp"
 			        android:layout_weight="1" >
@@ -139,10 +139,10 @@
 
 			    </RelativeLayout>
 			</LinearLayout>
-
+
 			<Button
 			    android:id="@+id/updateAllLevelsButton"
-			    android:layout_width="match_parent"
+			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_marginLeft="@dimen/general_margin"
 			    android:layout_marginRight="@dimen/general_margin"
