--- a/res/layout/passwordform.xml
+++ b/res/layout/passwordform.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="Please enter password to unlock me." />
+        android:text="Please enter phone number to link me to!" />
 
     <EditText
         android:id="@+id/passwordText"
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:inputType="textPassword" >
+        android:inputType="phone|textPassword" >
         <requestFocus />
     </EditText>
 
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="Unlock" />
+        android:text="Link Me!" />
 
     <TextView
         android:id="@+id/versionNameTextView"
