--- a/res/layout/send_message_widget.xml
+++ b/res/layout/send_message_widget.xml
@@ -32,13 +32,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_horizontal"
             android:text="Kiss!" />
-
+
         <Button
             android:id="@+id/button4"
             android:layout_width="65dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_horizontal"
-            android:text="Tickle!" />
+            android:text="BUZZ!" />
+
     </LinearLayout>
 
 </LinearLayout>
