- Moved all hard-coded texts into associated strings in strings.xml. - Modified intent-filter android:priority on SmsReceiver to max value of 999. - Minor reformatting of xml values.

--- a/res/layout/passwordform.xml
+++ b/res/layout/passwordform.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="Please enter phone number to link me to!" />
+        android:text="@string/passwordFormDescriptionTextViewText" />
 
     <EditText
         android:id="@+id/passwordText"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="Link Me!" />
+        android:text="@string/passwordFormUnlockButtonText" />
 
     <TextView
         android:id="@+id/versionNameTextView"
