--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -1,175 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mainActivityLinearLayout"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:weightSum="1" >
-
-    <ScrollView
-        android:id="@+id/mainActivityScrollView"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+      android:id="@+id/mainActivityScrollView"
+      android:layout_width="wrap_content"
+      android:layout_height="fill_parent" >
+      
+	<LinearLayout
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:id="@+id/mainActivityLinearLayout1"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center"
+	    android:orientation="vertical"
+	    android:weightSum="1" >
+	    
 		<LinearLayout
-		    xmlns:android="http://schemas.android.com/apk/res/android"
-		    android:id="@+id/mainActivityLinearLayout1"
-		    android:layout_width="fill_parent"
+		    android:id="@+id/drunkLevelLinearLayout"
+		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:gravity="center"
-		    android:orientation="vertical"
-		    android:weightSum="1" >
-		    
-			<LinearLayout
-			    android:id="@+id/drunkLevelLinearLayout"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_margin="@dimen/general_margin"
-			    android:orientation="vertical" >
-			    <SeekBar
-			        android:id="@+id/drunkLevelSeekBar"
-			        android:layout_width="fill_parent"
-			        android:layout_height="wrap_content"
-			        android:layout_weight="1" />
-			    <RelativeLayout
-			        android:id="@+id/drunkLevelRelativeLayout"
-			        android:layout_width="wrap_content"
-			        android:layout_height="wrap_content"
-			        android:layout_marginTop="10dp"
-			        android:layout_weight="1" >
-			        <TextView
-			            android:id="@+id/drunkLevelTextView"
-			            android:layout_width="wrap_content"
-			            android:layout_height="wrap_content"
-			            android:layout_alignParentLeft="true"
-			            android:text="drunkTextView" />
-			        <Button
-			            android:id="@+id/updateDrunkLevelButton"
-			            android:layout_width="@dimen/button_size"
-			            android:layout_height="wrap_content"
-			            android:layout_alignParentRight="true"
-			            android:text="Update" />
-			    </RelativeLayout>
-			</LinearLayout>
-
-			<LinearLayout
-			    android:id="@+id/sleepyLevelLinearLayout"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_margin="@dimen/general_margin"
-			    android:orientation="vertical" >
-			    <SeekBar
-			        android:id="@+id/sleepyLevelSeekBar"
-			        android:layout_width="fill_parent"
-			        android:layout_height="wrap_content"
-			        android:layout_weight="1" />
-			    <RelativeLayout
-			        android:id="@+id/sleepyLevelRelativeLayout"
-			        android:layout_width="wrap_content"
-			        android:layout_height="wrap_content"
-			        android:layout_marginTop="10dp"
-			        android:layout_weight="1" >
-			        <TextView
-			            android:id="@+id/sleepyLevelTextView"
-			            android:layout_width="wrap_content"
-			            android:layout_height="wrap_content"
-			            android:layout_alignParentLeft="true"
-			            android:text="sleepyTextView" />
-			        <Button
-			            android:id="@+id/updateSleepyLevelButton"
-			            android:layout_width="@dimen/button_size"
-			            android:layout_height="wrap_content"
-			            android:layout_alignParentRight="true"
-			            android:text="Update" />
-			    </RelativeLayout>
-			</LinearLayout>
-			<LinearLayout
-			    android:id="@+id/mwahLevelLinearLayout"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_margin="@dimen/general_margin"
-			    android:orientation="vertical" >				<SeekBar
-			        android:id="@+id/mwahLevelSeekBar"
-			        android:layout_width="fill_parent"
-			        android:layout_height="wrap_content"
-			        android:layout_weight="1" />
-			    <RelativeLayout
-			        android:id="@+id/mwahButtonsRelativeLayout"
-			        android:layout_width="wrap_content"
-			        android:layout_height="wrap_content"
-			        android:layout_marginTop="10dp"
-			        android:layout_weight="1" >
-			        <TextView
-			            android:id="@+id/mwahLevelTextView"
-			            android:layout_width="wrap_content"
-			            android:layout_height="wrap_content"
-			            android:layout_alignParentLeft="true"
-			            android:text="mwahTextView" />
-			        <Button
-			            android:id="@+id/updateMwahLevelButton"
-			            android:layout_width="@dimen/button_size"
-			            android:layout_height="wrap_content"
-			            android:layout_alignParentRight="true"
-			            android:text="Send Kiss" />
-			    </RelativeLayout>
-			</LinearLayout>
-
-			<LinearLayout
-			    android:id="@+id/huggleLevelLinearLayout"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_margin="@dimen/general_margin"
-			    android:orientation="vertical" >
-			    <SeekBar
-			        android:id="@+id/huggleLevelSeekBar"
-			        android:layout_width="fill_parent"
-			        android:layout_height="wrap_content"
-			        android:layout_weight="1" />
-			    <RelativeLayout
-			        android:id="@+id/huggleLevelRelativeLayout"
-			        android:layout_width="wrap_content"
-			        android:layout_height="wrap_content"
-			        android:layout_marginTop="10dp"
-			        android:layout_weight="1" >
-			        <TextView
-			            android:id="@+id/huggleLevelTextView"
-			            android:layout_width="wrap_content"
-			            android:layout_height="wrap_content"
-			            android:layout_alignParentLeft="true"
-			            android:text="huggleTextView" />
-			        <Button
-			            android:id="@+id/updateHuggleLevelButton"
-			            android:layout_width="@dimen/button_size"
-			            android:layout_height="wrap_content"
-			            android:layout_alignParentRight="true"
-			            android:text="Send Hug" />
-			    </RelativeLayout>
-			</LinearLayout>
-
-			<Button
-			    android:id="@+id/updateAllLevelsButton"
-			    android:layout_width="@dimen/button_size"
-			    android:layout_height="wrap_content"
-			    android:layout_marginLeft="@dimen/general_margin"
-			    android:layout_marginRight="@dimen/general_margin"
-			    android:text="Update ALL!!" />
-			
-			<Button
-			    android:id="@+id/instapicButton"
-			    android:layout_width="@dimen/button_size"
-			    android:layout_height="wrap_content"
-			    android:layout_marginLeft="@dimen/general_margin"
-			    android:layout_marginRight="@dimen/general_margin"
-			    android:text="Instapic!" />
-		
-			<Button
-			    android:id="@+id/buzzButton"
-			    android:layout_width="@dimen/button_size"
-			    android:layout_height="wrap_content"
-			    android:layout_marginLeft="@dimen/general_margin"
-			    android:layout_marginRight="@dimen/general_margin"
-			    android:text="BUZZ!" />
-			
+		    android:layout_margin="@dimen/general_margin"
+		    android:orientation="vertical" >
+		    <SeekBar
+		        android:id="@+id/drunkLevelSeekBar"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_weight="1" />
+		    <RelativeLayout
+		        android:id="@+id/drunkLevelRelativeLayout"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="10dp"
+		        android:layout_weight="1" >
+		        <TextView
+		            android:id="@+id/drunkLevelTextView"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_alignParentLeft="true"
+		            android:text="@string/mainActivityDrunkLevelTextViewText" />
+		        <Button
+		            android:id="@+id/updateDrunkLevelButton"
+		            android:layout_width="@dimen/button_size"
+		            android:layout_height="wrap_content"
+		            android:layout_alignParentRight="true"
+		            android:text="@string/mainActivityUpdateDrunkLevelButtonText" />
+		    </RelativeLayout>
 		</LinearLayout>
-    </ScrollView>
-</LinearLayout>
+	
+		<LinearLayout
+		    android:id="@+id/sleepyLevelLinearLayout"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_margin="@dimen/general_margin"
+		    android:orientation="vertical" >
+		    <SeekBar
+		        android:id="@+id/sleepyLevelSeekBar"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_weight="1" />
+		    <RelativeLayout
+		        android:id="@+id/sleepyLevelRelativeLayout"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="10dp"
+		        android:layout_weight="1" >
+		        <TextView
+		            android:id="@+id/sleepyLevelTextView"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_alignParentLeft="true"
+		            android:text="@string/mainActivitySleepyLevelTextViewText" />
+		        <Button
+		            android:id="@+id/updateSleepyLevelButton"
+		            android:layout_width="@dimen/button_size"
+		            android:layout_height="wrap_content"
+		            android:layout_alignParentRight="true"
+		            android:text="@string/mainActivityUpdateSleepyLevelButtonText" />
+		    </RelativeLayout>
+		</LinearLayout>	
+		<LinearLayout
+		    android:id="@+id/mwahLevelLinearLayout"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_margin="@dimen/general_margin"
+		    android:orientation="vertical" >			<SeekBar
+		        android:id="@+id/mwahLevelSeekBar"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_weight="1" />
+		    <RelativeLayout
+		        android:id="@+id/mwahButtonsRelativeLayout"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="10dp"
+		        android:layout_weight="1" >
+		        <TextView
+		            android:id="@+id/mwahLevelTextView"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_alignParentLeft="true"
+		            android:text="@string/mainActivityMwahLevelTextViewText" />
+		        <Button
+		            android:id="@+id/updateMwahLevelButton"
+		            android:layout_width="@dimen/button_size"
+		            android:layout_height="wrap_content"
+		            android:layout_alignParentRight="true"
+		            android:text="@string/mainActivityUpdateMwahLevelButtonText" />
+		    </RelativeLayout>
+		</LinearLayout>
+	
+		<LinearLayout
+		    android:id="@+id/huggleLevelLinearLayout"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_margin="@dimen/general_margin"
+		    android:orientation="vertical" >
+		    <SeekBar
+		        android:id="@+id/huggleLevelSeekBar"
+		        android:layout_width="fill_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_weight="1" />
+		    <RelativeLayout
+		        android:id="@+id/huggleLevelRelativeLayout"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="10dp"
+		        android:layout_weight="1" >
+		        <TextView
+		            android:id="@+id/huggleLevelTextView"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_alignParentLeft="true"
+		            android:text="@string/mainActivityHuggleLevelTextViewText" />
+		        <Button
+		            android:id="@+id/updateHuggleLevelButton"
+		            android:layout_width="@dimen/button_size"
+		            android:layout_height="wrap_content"
+		            android:layout_alignParentRight="true"
+		            android:text="@string/mainActivityUpdateHuggleLevelButtonText" />
+		    </RelativeLayout>
+		</LinearLayout>
+	
+		<Button
+		    android:id="@+id/updateAllLevelsButton"
+		    android:layout_width="@dimen/button_size"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="@dimen/general_margin"
+		    android:layout_marginRight="@dimen/general_margin"
+		    android:text="@string/mainActivityUpdateAllLevelsButtonText" />
+		
+		<Button
+		    android:id="@+id/instapicButton"
+		    android:layout_width="@dimen/button_size"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="@dimen/general_margin"
+		    android:layout_marginRight="@dimen/general_margin"
+		    android:text="@string/mainActivityInstapicButtonText" />
+	
+		<Button
+		    android:id="@+id/buzzButton"
+		    android:layout_width="@dimen/button_size"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="@dimen/general_margin"
+		    android:layout_marginRight="@dimen/general_margin"
+		    android:text="@string/mainActivityBuzzButtonText" />
+		
+	</LinearLayout>
+	
+</ScrollView>
