--- a/res/xml/widget_provider.xml
+++ b/res/xml/widget_provider.xml
@@ -3,5 +3,5 @@
  	android:minWidth="294dp"
     android:minHeight="72dp"    
     android:updatePeriodMillis="0"
-    android:initialLayout="@layout/send_message_widget"
+    android:initialLayout="@layout/widget"
 />	
