--- a/res/layout/passwordform.xml
+++ b/res/layout/passwordform.xml
@@ -21,7 +21,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
+        android:gravity="center_vertical|center"
+        android:hint="@string/passwordFormExampleText"
         android:inputType="phone|textPassword" >
+
         <requestFocus />
     </EditText>
 
