--- a/res/xml/settings_preferences.xml
+++ b/res/xml/settings_preferences.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    android:title="Settings">
     <EditTextPreference
-        android:key="linkedNumberPref"
+        android:key="linkedNumber"
         android:title="Linked Number"
         android:icon="@drawable/ic_menu_link"
         android:persistent="true" />
