Build v.1.0.6. Began refactorization of Constants file into interface classes.

--- a/res/xml/settings_preferences.xml
+++ b/res/xml/settings_preferences.xml
@@ -4,6 +4,7 @@
     <EditTextPreference
         android:key="linkedNumber"
         android:title="Linked Number"
-        android:icon="@drawable/ic_menu_link"
+        android:icon="@drawable/ic_menu_link" 
+        android:inputType="number"
         android:persistent="true" />
 </PreferenceScreen>
