Refactored MainActivity to bind to Service through bindService() instead of creating and passing intents. Implemented LocalBinder to facilitate service binding. Fixed SmsReceiver bug by removing "android:exported="false"" from SmsReceiver in manifest. Minor refactor of InputLinkedNumberActivity variables. Minor refactor of xml string and dimension variables. Minor refactor of widget variables.

--- a/res/layout/input_linked_number_activity.xml
+++ b/res/layout/input_linked_number_activity.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="@string/passwordFormDescriptionTextViewText" />
+        android:text="@string/linkedNumberDescriptionText" />
 
     <EditText
         android:id="@+id/passwordText"
@@ -22,19 +22,19 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:gravity="center_vertical|center"
-        android:hint="@string/passwordFormExampleText"
+        android:hint="@string/linkedNumberExampleText"
         android:inputType="phone|textPassword" >
 
         <requestFocus />
     </EditText>
 
     <Button
-        android:id="@+id/unlockButton"
+        android:id="@+id/submitButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="@string/passwordFormUnlockButtonText" />
+        android:text="@string/submitLinkedNumberButtonText" />
 
     <TextView
         android:id="@+id/versionNameTextView"
