--- a/res/values/dimensions.xml
+++ b/res/values/dimensions.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="general_margin">25dp</dimen>
-    <dimen name="widget_margin">8dp</dimen>   
     <dimen name="button_size">100dp</dimen> 
+    
+    <dimen name="widget_margin">8dp</dimen>
+    <dimen name="widget_button_size">75dp</dimen>
 </resources>
